# qubes-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
deploy/: install-stage-a.sh  install-stage-b.sh  install-stage-c.sh  install-stage-d.sh  install-stage-e1.sh  install-stage-e2.sh  install-stage-f1.sh  install-stage-f2.sh  test-stage-a.py  test-stage-b.py  test-stage-c.py  test-stage-d.py  test-stage-e1.py  test-stage-e2.py  test-stage-f1.py  test-stage-f2.py  uninstall-stage-a.sh  uninstall-stage-b.sh  uninstall-stage-c.sh  uninstall-stage-d.sh  uninstall-stage-e1.sh  uninstall-stage-e2.sh  uninstall-stage-f1.sh  uninstall-stage-f2.sh
dom0-rpc/: qmcp.AIManagedEvents  qmcp.AttachDeviceAIManaged  qmcp.CloneAIManagedQube  qmcp.DetachDeviceAIManaged  qmcp.GetPropertyAIManaged  qmcp.LifecycleAIManaged  qmcp.ListAIManagedQubes  qmcp.SetFeatureAIManaged  qmcp.SetPropertyAIManaged  qmcp.SpawnAIManagedQube  qmcp.SpawnDisposableAIManaged
policy/: 30-mcp-control.policy
qubes_mcp/: __main__.py  server.py
qubes_mcp/tools/: _qrexec.py  qubes_clone.py  qubes_copy.py  qubes_device_attach.py  qubes_device_detach.py  qubes_device_list.py  qubes_events.py  qubes_feature_set.py  qubes_firewall_get.py  qubes_firewall_set.py  qubes_install_pkg.py  qubes_list.py  qubes_props_get.py  qubes_props_set.py  qubes_remove.py  qubes_run.py  qubes_run_disposable.py  qubes_shutdown.py  qubes_spawn.py  qubes_spawn_disposable.py  qubes_start.py  qubes_state.py
template-rpc/: qmcp.CopyToAIManaged  qmcp.RunInAIManaged
